--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "ngx-pagination": "^6.0.3",
     "ngx-toastr": "^16.1.0",
+    "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.7.1",
     "tslib": "^2.3.0",
